# pithddu-firmware

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  idf-env.sh  justfile  partitions.csv  partitions_4mb.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml
boards/: devkit_s2.defaults  devkitc_s3.defaults  generic_s3.defaults  s2_mini.defaults  xiao_s3.defaults  zero_s3.defaults
components/pith_usb/: pith_usb.c
main/: CMakeLists.txt  car_data.c  car_data.h  device_pins.c  device_pins.h  device_serial.c  device_serial.h  field_registry.json  field_registry_gen.h  format_common.h  hid_gamepad.c  hid_gamepad.h  idf_component.yml  led_rev.c  led_rev.h  lgfx_setup.hpp  race_layout.c  race_layout.h  simhub_main.c  simhub_proto.c  simhub_proto.h  ui.cpp  ui.hpp  ui_config.c  ui_config.h  usb_descriptors.c
pith-core/: Cargo.toml  build.rs
pith-core/src/: format.rs  lib.rs  shift.rs  simhub.rs
src/: display.rs  hid.rs  led.rs  main.rs  ota.rs  sim.rs  state.rs  ui.rs  usb.rs
tools/: 99-pithddu.rules  gen_field_registry.py
