[package]
name = "pithddu"
version = "0.9.5"
edition = "2021"
resolver = "2"
rust-version = "1.77"
description = "Pith DDU sim-racing dashboard firmware (ESP32-S3), Rust rewrite"
repository = "https://github.com/lemonxah/pithddu-firmware"
license = "MIT"

[[bin]]
name = "pithddu"
path = "src/main.rs"

[workspace]
members = ["pith-core"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

# Board selection (only xiao_s3 implemented for now). Baked into @CAP as `board`.
xiao_s3 = []

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
pith-core = { path = "pith-core" }

[build-dependencies]
embuild = "0.33"

# USB composite stack: a local C shim over raw `espressif/tinyusb`
# (components/pith_usb), NOT esp_tinyusb (which can't be bindgen'd here — FreeRTOS
# OSAL + packed/align walls; see the firmware-usb-bindgen memory). bindgen only
# processes the shim's clean header (no tinyusb types) and merges its API into
# esp_idf_svc::sys::*.
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/pith_usb"]
bindings_header = "components/pith_usb/include/pith_usb.h"
